--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,5 +1,9 @@
 <h3>Cart</h3>
 
+<p>
+
+  <a routerLinker = "/shipping">Shipping Costs</a>
+
 <div class="cart-item" *ngFor="let item of items">
   <span>{{ item.name }}</span>
   <span>{{ item.price | currency }}</span>
