--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,10 +1,10 @@
 <h3>Cart</h3>
 
 <p>
-
-  <a routerLinker = "/shipping">Shipping Costs</a>
+  <a routerLink="/shipping">Shipping Prices</a>
+</p>
 
 <div class="cart-item" *ngFor="let item of items">
-  <span>{{ item.name }}</span>
-  <span>{{ item.price | currency }}</span>
+	<span>{{ item.name }}</span>
+	<span>{{ item.price | currency }}</span>
 </div>
