--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -4,6 +4,13 @@
   <a routerLink="/shipping">Shipping Prices</a>
 </p>
 
+
+<form [formGroup]="checkoutForm" (ngSubmit)="onSubmit(checkoutForm.value)">
+
+  <button class="button" type="submit">Purchase</button>
+
+</form>
+
 <div class="cart-item" *ngFor="let item of items">
 	<span>{{ item.name }}</span>
 	<span>{{ item.price | currency }}</span>
